Host website via GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1,49 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-TW">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>234b6fa2e21dcc3a - Unique Identifier Site</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background: #6200ea;
-            color: #fff;
-            padding: 1rem 0;
-            text-align: center;
-        }
-        main {
-            padding: 2rem;
-        }
-        .identifier {
-            font-size: 1.5rem;
-            color: #6200ea;
-        }
-        footer {
-            text-align: center;
-            padding: 1rem 0;
-            background: #ccc;
-            color: #333;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Welcome to 234b6fa2e21dcc3a</h1>
-    </header>
-    <main>
-        <p>Explore our unique app and content linked to identifier:</p>
-        <p class="identifier">234b6fa2e21dcc3a</p>
-        <p>This site is a placeholder inspired by data derived from the unique ID. Multilingual support for Traditional Chinese is available!</p>
-    </main>
-    <footer>
-        <p>&copy; 2025 Identifier App. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+<!DOCTYPE html><html lang="zh-TW"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>234b6fa2e21dcc3a - Unique Identifier Site</title><style>body {font-family: Arial, sans-serif;margin: 0;padding: 0;background-color: #f4f4f9;color: #333;}header {background: #6200ea;color: #fff;padding: 1rem 0;text-align: center;}main {padding: 2rem;}.identifier {font-size: 1.5rem;color: #6200ea;}footer {text-align: center;padding: 1rem 0;background: #ccc;color: #333;}</style></head><body><header><h1>Welcome to 234b6fa2e21dcc3a</h1></header><main><p>Explore our unique app and content linked to identifier:</p><p class="identifier">234b6fa2e21dcc3a</p><p>This site is a placeholder inspired by data derived from the unique ID. Multilingual support for Traditional Chinese is available!</p></main><footer><p>&copy; 2025 Identifier App. All rights reserved.</p></footer></body></html>
